fix - remove letter spacing

--- a/src/components/Footer/index.sass
+++ b/src/components/Footer/index.sass
@@ -22,7 +22,6 @@
     font-size: 18px !important
     padding-bottom: 20px
     padding-top: 20px
-    letter-spacing: 0.5px
     font-family: ProximaNovaRegular
 
   &__phone
@@ -109,7 +108,6 @@
     padding: 60px 100px 50px 100px
     a
       font-size: 20px !important
-      letter-spacing: 0.2px
 
     h3
       font-size: 20px !important
