--- a/src/components/Mission/index.sass
+++ b/src/components/Mission/index.sass
@@ -4,7 +4,6 @@
   background-color: $slightOrange
   padding: 50px 30px
   text-align: left
-  letter-spacing: 0.2px
 
   &__left-side
     h2
