--- a/src/components/Technologies/index.sass
+++ b/src/components/Technologies/index.sass
@@ -8,7 +8,6 @@
     padding-top: 80px
     padding-bottom: 30px
     color: $white
-    letter-spacing: 0.5px
     display: block
     color: $white
 
