--- a/src/pages/App/index.sass
+++ b/src/pages/App/index.sass
@@ -31,7 +31,6 @@ p, h1, h2, h3
   color: $darkGray
 
 h1, h2, h3, h4, h5, h6
-  letter-spacing: 0.2px
   margin: 0
 
 @font-face
